--- a/api-server/package.json
+++ b/api-server/package.json
@@ -16,6 +16,7 @@
         "bcrypt": "^5.0.1",
         "uuid": "^8.3.2",
         "jsonwebtoken":"^8.5.1",
-        "json2csv": "^5.0.6"
+        "json2csv": "^5.0.6",
+        "winston": "^3.3.3"
     }
 }
