--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,12 @@ services:
     build:
       context: ./api-server
       dockerfile: Dockerfile
+    environment:
+      - DB_HOST=mariadb
+      - DB=${MARIADB_DATABASE}
+      - DB_USER=${MARIADB_USER}
+      - DB_PWD=${MARIADB_PASSWORD}
+
     ports:
       - "3000:8081"
     volumes:
