--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,11 +47,8 @@ services:
       - DB=${MARIADB_DATABASE}
       - DB_USER=${MARIADB_USER}
       - DB_PWD=${MARIADB_PASSWORD}
-
-    ports:
-      - "3000:8081"
     volumes:
-      - ./api-server/data:/api-server/data
+      - ./api-server/data:/app/data
     depends_on:
       - mariadb
 
